@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Improved stability of fl_read_image (STR #2021)
 	- Fixed adding an idle handler during
 	  a draw() call (STR #1950)
 	- Fl_Group::clip_children() is now public (STR #2017)
@@ -25,7 +26,9 @@ CHANGES IN FLTK 1.3.0
 	  Fl_Value_Input, and Fl_Text_Display derived
           widgets (STR #1770)
         - Initial setup (STR #1904)
-	- winsock dll is dynamically loaded and by default ws2_32.dll, use of winsock1 is still possible by defining USE_WSOCK1 at compile time.
+	- winsock dll is dynamically loaded and by default 
+	  ws2_32.dll, use of winsock1 is still possible by defining 
+	  USE_WSOCK1 at compile time.
 	- Cairo support: added --enable-cairo and --enable-cairoext 
           configure options.
 	- Now vc2005 devenv in ide subdirectory
